--- a/Shopping_Tutorial/Shopping_Tutorial/Areas/Admin/Views/Category/Index.cshtml
+++ b/Shopping_Tutorial/Shopping_Tutorial/Areas/Admin/Views/Category/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<CategoryModel>
 @{
     ViewData["Title"] = "Category Listed";
+
+    Paginate paper = ViewBag.Paper as Paginate;
 }
 <h3>List Category</h3>
 <a asp-action="Create" asp-controller="Category">Add Category</a>
 <table class="table">
     <thead>
         <tr>
-            <th scope="col">#</th>
+            <th scope="col">Id</th>
             <th scope="col">Category Name</th>
             <th scope="col">Category Description</th>
             <th scope="col">Category Slug</th>
@@ -43,3 +45,4 @@
 
     </tbody>
 </table>
+<partial name = "_Paging" model="paper" />
